Atualização do curriculo

--- a/index.html
+++ b/index.html
@@ -91,10 +91,7 @@
             <a href="https://mail.google.com/mail/u/1/#inbox" target="_blank"><i class="fa fa-envelope"></i></a>
           </li>
         </ul>
-        <a href="img/Jonathas-abreu.pdf" target="_blank" class="curriculoBox">Ver Currículo</a>
-      </div>
-      <div class="setaBox d-flex justify-content-center" >
-        <a href="#sobre" class="botaoMouse">&or;</a>
+        <a href="img/Jonathas-abreu-dev.pdf" target="_blank" class="curriculoBox">Ver Currículo</a>
       </div>
     </header>
     <!-- Fim cabeçalho -->
@@ -535,7 +532,7 @@
             </div>
           </div>
         </div>
-        <a href="img/Jonathas-abreu.pdf" target="_blank" class="verMais">Ver Mais</a>
+        <a href="img/Jonathas-abreu-dev.pdf" target="_blank" class="verMais">Ver Mais</a>
       </div>
     </section>
     <!-- Fim experiência -->
