--- a/contato.html
+++ b/contato.html
@@ -28,18 +28,23 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Portfólio - Jonathas Abreu</title>
+    <title>Sobre</title>
   </head>
-
-  <body id="inicial" class="entrada" data-target="main-nav" data-spy="scroll">
+  <body id="contato" class="entrada">
     <!-- Cabeçalho -->
-    <header class="header-main">
+    <header>
       <nav
         class="navbar navbar-expand-sm navbar-dark fixed-top menuMain"
-        id="main-nav">
+        id="main-nav"
+      >
         <div class="container">
           <a href="#" class="navbar-brand">
-            <img src="img/Logo.png" alt="logo Jonathas Abreu" width="100" class="img-fluid"/></a>
+            <img
+              src="img/Logo.png"
+              alt="logo Jonathas Abreu"
+              width="100"
+              class="img-fluid"
+          /></a>
           <button
             class="navbar-toggler"
             data-toggle="collapse"
@@ -52,7 +57,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a href="#" class="nav-link linkHover">Início</a>
+                <a href="index.html" class="nav-link linkHover">Início</a>
               </li>
               <li class="nav-item">
                 <a href="sobre.html" class="nav-link linkHover">Sobre</a>
@@ -66,54 +71,84 @@
                 <a href="formacao.html" class="nav-link linkHover">Formação</a>
               </li>
               <li class="nav-item">
-                <a href="contato.html" class="nav-link linkHover">Contato</a>
+                <a href="#" class="nav-link linkHover">Contato</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      <div id="inicio" class="intro">
-        <p>Jonathas Abreu</p>
-        <div class="intro2">
-          <div class="typewriter">Desenvolvedor Full-Stack</div>
-        </div>
-        <ul>
-          <li>
-            <a href="https://github.com/JonathasAbreu" target="_blank"><i class="fab fa-github"></i></a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/jonathas-abreu/" target="_blank""><i class="fab fa-linkedin-in"></i></a>
-          </li>
-          <li>
-            <a href="https://wa.me/5527981680206" target="_blank"><i class="fab fa-whatsapp"></i></a>
-          </li>
-          <li>
-            <a href="https://mail.google.com/mail/u/1/#inbox" target="_blank"><i class="fa fa-envelope"></i></a>
-          </li>
-        </ul>
-        <a href="img/Jonathas-abreu-dev.pdf" target="_blank" class="curriculoBox">Ver Currículo</a>
-      </div>
     </header>
     <!-- Fim cabeçalho -->
+
+    <!-- Entre em contato -->
+    <section id="contato" class="conversar">
+      <div class="container">
+        <div class="row">
+          <div class="introSobre">
+            <h1>Entre em <strong> Contato</strong></h1>
+            <img src="images/divisoria1.png" width="100" alt="" srcset="" />
+            <p class="conversarP">
+              Para mais detalhes sobre as minhas Hard skills e Soft skills,
+              entre em contato que ficarei feliz em conversar com você.
+            </p>
+          </div>
+
+          <div class="col-md-4">
+            <div class="cardC">
+              <i class="fas fa-mobile-alt"></i>
+              <p>WhatsApp</p>
+              <a href="tel:" target="_blank">+55 (27) 98168-0206</a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="cardC">
+              <i class="fas fa-envelope"></i>
+              <p>Email</p>
+              <a href="https://mail.google.com/mail/u/1/#inbox" target="_blank"
+                >jonathasabreu.dev@gmail.com</a
+              >
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="cardC">
+              <i class="fas fa-mobile-alt"></i>
+              <p>Localização</p>
+              <a
+                href="https://www.google.com.br/maps/place/Cariacica,+State+of+Esp%C3%ADrito+Santo,+29159-015/@-20.2635357,-40.4460187,13.75z/data=!4m6!3m5!1s0xb83b3bf41d4b8f:0xe4269e7cc5ef5abb!8m2!3d-20.2643105!4d-40.4203022!16s%2Fg%2F11bc651m9q?entry=ttu&g_ep=EgoyMDI1MDEyMC4wIKXMDSoASAFQAw%3D%3D"
+                target="_blank"
+                >Cariacica, ES</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Fim entre em contato -->
 
     <!-- footer -->
     <footer id="footer" class="footer">
       <div class="container">
         <div class="row align-items-center row-hl">
-          <div class="col-6">
-            &COPY; 2025 Jonathas Abreu de Pontes.<br />
-          </div>
+          <div class="col-6">&COPY; 2025 Jonathas Abreu de Pontes.<br /></div>
           <div class="col-6">
             <div class="redesSociaisFooter">
               <ul>
                 <li>
-                  <a href="https://github.com/JonathasAbreu" target="_blank"><i class="fab fa-github"></i></a>
+                  <a href="https://github.com/JonathasAbreu" target="_blank"
+                    ><i class="fab fa-github"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/in/jonathas-abreu/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                </li>          
+                  <a
+                    href="https://www.linkedin.com/in/jonathas-abreu/"
+                    target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
+                </li>
                 <li>
-                  <a href="https://wa.me/5527981680206" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                  <a href="https://wa.me/5527981680206" target="_blank"
+                    ><i class="fab fa-whatsapp"></i
+                  ></a>
                 </li>
               </ul>
             </div>
