Atualizando arquitetura do portfólio

--- a/contato.html
+++ b/contato.html
@@ -64,7 +64,7 @@
               </li>
               <li class="nav-item">
                 <a href="experiencia.html" class="nav-link linkHover"
-                  >Experiência</a
+                  >Experiência/Projeto</a
                 >
               </li>
               <li class="nav-item">
