--- a/experiencia.html
+++ b/experiencia.html
@@ -63,7 +63,7 @@
                 <a href="sobre.html" class="nav-link linkHover">Sobre</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link linkHover">Experiência</a>
+                <a href="#" class="nav-link linkHover">Experiência/Projeto</a>
               </li>
               <li class="nav-item">
                 <a href="formacao.html" class="nav-link linkHover">Formação</a>
