--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </li>
               <li class="nav-item">
                 <a href="experiencia.html" class="nav-link linkHover"
-                  >Experiência</a
+                  >Experiência/Projeto</a
                 >
               </li>
               <li class="nav-item">
