--- a/formacao.html
+++ b/formacao.html
@@ -28,7 +28,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Sobre</title>
+    <title>Formação</title>
   </head>
   <body class="entrada">
     <!-- Cabeçalho -->
@@ -64,7 +64,7 @@
               </li>
               <li class="nav-item">
                 <a href="experiencia.html" class="nav-link linkHover"
-                  >Experiência/Projeto</a
+                  >Experiências / Projetos</a
                 >
               </li>
               <li class="nav-item">
@@ -113,35 +113,57 @@
 
           <div class="timeline-area">
             <div>
-              <h2>Desde 2022</h2>
-              <h3>DIO | Alura | Coursera | Udemy | Balta</h3>
-              <h4>Especializações</h4>
+              <h2>2025 - Cursando</h2>
+              <h3><strong>Pós-Graduação</strong></h3>
+              <h3>Engenharia de Software</h3>
+              <h4>Faculdade Líbano</h4>
               <p>
-                Para ter acesso a todas as especializações clique abaixo. <br />
-                <a
-                  href="https://www.linkedin.com/in/jonathas-abreu/details/certifications/"
-                  class="botaoCertificados"
-                  target="_blank"
-                  >Certificados</a
-                >
+                Desenvolvi habilidades sobre os princípios de engenharia de software, desde análise de requisitos e design de arquitetura até testes e qualidade, para desenvolvimento de sistemas confiáveis e eficientes. Domínio de técnicas e ferramentas modernas para o ciclo de vida completo do software, garantindo a entrega de produtos de alta qualidade e valor para o negócio.
+              </p>
+            </div>
+            <div>
+              <h2>2025 - Cursando</h2>
+              <h3><strong>Pós-Graduação</strong></h3>
+              <h3>Faculdade Líbano</h3>
+              <h4>Gestão de Projetos e Metodologias Ágeis</h4>
+              <p>
+                Adquiri conhecimento em planejamento, execução, monitoramento e controle de projetos de software, com foco em cumprimento de prazos, orçamentos e objetivos estratégicos. Habilidade em liderar equipes multidisciplinares, gerenciar riscos e promover a comunicação eficaz entre as partes interessadas do projeto.
               </p>
             </div>
             <div>
               <h2>2022 - 2024</h2>
+              <h3><strong>Tecnólogo</strong></h3>
               <h3>FAESA</h3>
               <h4>Análise e Desenvolvimento de Sistemas</h4>
               <p>
-                O curso me ajudou a ser um profissional capacitado para
-                desenvolver, implementar e gerenciar sistemas computacionais,
-                além de proporcionar uma sólida base para atuar em diversas
-                áreas da tecnologia da informação. Ao longo do curso, aprendi
-                tanto os aspectos teóricos quanto práticos da área de
-                desenvolvimento de software, além de habilidades técnicas para
-                lidar com desafios do mercado de TI.
+                Este Tecnólogo me capacitou para desenvolver, implementar e
+                gerenciar sistemas computacionais, além de proporcionar uma
+                sólida base para atuar em diversas áreas da tecnologia da
+                informação. Ao longo do curso, aprendi tanto os aspectos
+                teóricos quanto práticos da área de desenvolvimento de software,
+                além de habilidades técnicas para lidar com desafios do mercado
+                de TI.
+              </p>
+            </div>
+            <div>
+              <h2>2022 - 2024</h2>
+              <h3><strong>Especialização</strong></h3>
+              <h3>DIO | Alura | Udemy | Balta</h3>
+              <h4>Especializações</h4>
+              <p>
+                Para ter acesso a todas as especializações clique no link
+                abaixo. <br />
+                <a
+                href="https://www.linkedin.com/in/jonathas-abreu/details/certifications/"
+                class="botaoCertificados"
+                target="_blank"
+                >Certificados</a
+                >
               </p>
             </div>
             <div>
               <h2>2008 - 2010</h2>
+              <h3><strong>Técnico</strong></h3>
               <h3>UP</h3>
               <h4>Gestão Empresarial</h4>
               <p>
@@ -194,20 +216,20 @@
     <!-- Fim Footer -->
 
     <script
-    src="http://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"
+      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
     ></script>
     <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
     ></script>
     <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-    integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-    crossorigin="anonymous"
-    ></script>    
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+      integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+      crossorigin="anonymous"
+    ></script>
     <script src="./script/script.js"></script>
   </body>
 </html>
