--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Portfólio - Jonathas Abreu</title>
+    <title>Jonathas Abreu</title>
   </head>
-
   <body id="inicial" class="entrada" data-target="main-nav" data-spy="scroll">
     <!-- Cabeçalho -->
     <header class="header-main">
@@ -59,7 +58,7 @@
               </li>
               <li class="nav-item">
                 <a href="experiencia.html" class="nav-link linkHover"
-                  >Experiência/Projeto</a
+                  >Experiências / Projetos</a
                 >
               </li>
               <li class="nav-item">
