--- a/contato.html
+++ b/contato.html
@@ -28,7 +28,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Sobre</title>
+    <title>Contato</title>
   </head>
   <body id="contato" class="entrada">
     <!-- Cabeçalho -->
@@ -64,7 +64,7 @@
               </li>
               <li class="nav-item">
                 <a href="experiencia.html" class="nav-link linkHover"
-                  >Experiência/Projeto</a
+                  >Experiências / Projetos</a
                 >
               </li>
               <li class="nav-item">
@@ -85,15 +85,27 @@
       <div class="container">
         <div class="row">
           <div class="introSobre">
-            <h1>Entre em <strong> Contato</strong></h1>
+            <h1>Mande uma<strong> Mensagem</strong></h1>
             <img src="images/divisoria1.png" width="100" alt="" srcset="" />
-            <p class="conversarP">
-              Para mais detalhes sobre as minhas Hard skills e Soft skills,
-              entre em contato que ficarei feliz em conversar com você.
-            </p>
           </div>
 
-          <div class="col-md-4">
+          <div class="formcontato">
+            <form id="formulario-contato">
+              <label for="nome">Nome:</label>
+              <input type="text" id="nome" name="nome" required>
+              <label for="telefone">Telefone:</label>
+              <input type="tel" id="telefone" inputmode="numeric" name="telefone" maxlength="15" placeholder="Digite apenas números" required>
+              <label for="email">E-mail:</label>
+              <input type="email" id="email" name="email" placeholder="email@email.com" required>
+              <label for="mensagem">Mensagem:</label>
+              <textarea type="mensagem" id="mensagem" name="mensagem" placeholder="Digite sua mensagem" required></textarea>
+
+              <button type="submit" id="enviar" >Enviar</button>
+
+            </form>
+          </div>
+
+          <!-- <div class="col-md-4">
             <div class="cardC">
               <i class="fas fa-mobile-alt"></i>
               <p>WhatsApp</p>
@@ -118,7 +130,7 @@
                 target="_blank"
                 >Cariacica, ES</a
               >
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -159,20 +171,40 @@
     <!-- Fim Footer -->
 
     <script
-    src="http://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"
+      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
     ></script>
     <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
     ></script>
     <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-    integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-    crossorigin="anonymous"
-    ></script>    
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+      integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+      crossorigin="anonymous"
+    ></script>
     <script src="./script/script.js"></script>
+<script>
+document.getElementById('telefone').addEventListener('input', function (digitado) {
+  this.value = this.value.replace(/\D/g, '');
+});
+</script>
+
+<script>
+  document.getElementById('telefone').addEventListener('input', function (digitado) {
+        let value = digitado.target.value.replace(/\D/g, '');
+
+        if (value.length > 11) value = value.slice(0, 11);
+
+        if(value.length <= 10) {
+            value = value.replace(/^(\d{2})(\d{4})(\d{0,4})$/, "($1) $2-$3");
+        } else {
+            value = value.replace(/^(\d{2})(\d{5})(\d{0,4})$/, "($1) $2-$3");
+        }
+        digitado.target.value = value;
+    });
+</script>
   </body>
 </html>
