Style do formulario de contato

--- a/experiencia.html
+++ b/experiencia.html
@@ -28,7 +28,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Esperiência / Projetos</title>
+    <title>Esperiências / Projetos</title>
   </head>
   <body class="entrada">
     <!-- Cabeçalho -->
