--- a/contato.html
+++ b/contato.html
@@ -91,16 +91,16 @@
 
           <div class="formcontato">
             <form id="formulario-contato">
-              <label for="nome">Nome:</label>
+              <label for="nome">Nome</label>
               <input type="text" id="nome" name="nome" required>
-              <label for="telefone">Telefone:</label>
+              <label for="telefone">Telefone</label>
               <input type="tel" id="telefone" inputmode="numeric" name="telefone" maxlength="15" placeholder="Digite apenas números" required>
-              <label for="email">E-mail:</label>
+              <label for="email">E-mail</label>
               <input type="email" id="email" name="email" placeholder="email@email.com" required>
-              <label for="mensagem">Mensagem:</label>
+              <label for="mensagem">Mensagem</label>
               <textarea type="mensagem" id="mensagem" name="mensagem" placeholder="Digite sua mensagem" required></textarea>
 
-              <button type="submit" id="enviar" >Enviar</button>
+              <button type="submit" id="enviar">Enviar</button>
 
             </form>
           </div>
