--- a/contato.html
+++ b/contato.html
@@ -89,21 +89,30 @@
             <img src="images/divisoria1.png" width="100" alt="" srcset="" />
           </div>
 
-          <div class="formcontato">
-            <form id="formulario-contato">
+          <div class="form-contato">
+            <form id="formulario-contato" action="https://formsubmit.co/jonathasabreu.dev@gmail.com" method="POST">
               <label for="nome">Nome</label>
               <input type="text" id="nome" name="nome" required>
+
               <label for="telefone">Telefone</label>
-              <input type="tel" id="telefone" inputmode="numeric" name="telefone" maxlength="15" placeholder="Digite apenas números" required>
+              <input type="tel" id="telefone" inputmode="numeric" name="telefone" maxlength="15" placeholder="Digite apenas números" pattern="\(\d{2}\) \d{5}-\d{4}" required>
+
               <label for="email">E-mail</label>
               <input type="email" id="email" name="email" placeholder="email@email.com" required>
+              
               <label for="mensagem">Mensagem</label>
               <textarea type="mensagem" id="mensagem" name="mensagem" placeholder="Digite sua mensagem" required></textarea>
 
-              <button type="submit" id="enviar">Enviar</button>
+              <input type="hidden" name="_captcha" value="false">
+              <input type="hidden" name="_next" value="http://127.0.0.1:5501/contato.html?success=true">
 
+              <button class="btn-enviar" type="submit" id="enviar">Enviar</button>
             </form>
+
+            <p id="msg-enviada" style="display: none; color: green; margin-top: 10px;">Mensagem enviada com sucesso!</p>
+
           </div>
+
 
           <!-- <div class="col-md-4">
             <div class="cardC">
@@ -169,7 +178,7 @@
       </div>
     </footer>
     <!-- Fim Footer -->
-
+    
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -185,7 +194,9 @@
       integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
       crossorigin="anonymous"
     ></script>
+
     <script src="./script/script.js"></script>
+
 <script>
 document.getElementById('telefone').addEventListener('input', function (digitado) {
   this.value = this.value.replace(/\D/g, '');
@@ -206,5 +217,6 @@ document.getElementById('telefone').addEventListener('input', function (digitado
         digitado.target.value = value;
     });
 </script>
+
   </body>
 </html>
